# adil4311

./: .env.example  .env.template  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  celery_app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  test_setup.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_init.py
backend/: __init__.py  db.py  main.py  models.py
backend/ai/: __init__.py  manager.py
backend/ai/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
backend/api/: deps.py
backend/api/routes/: __init__.py  ai.py  auth.py  projects.py  settings.py
backend/core/: config.py  crypto.py  logging.py  security.py
backend/db/: base.py  session.py
backend/models/: __init__.py  apikey.py  project.py  user.py
backend/routers/: auth.py  projects.py
backend/schemas/: project.py
backend/services/: __init__.py  orchestrator.py  tasks.py
backend/services/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
backend/tasks/: codegen.py
deploy/: Dockerfile  docker-compose.yml
docs/: README.md
frontend/: app.py
hyperai_builder/: __init__.py
hyperai_builder/ai/generators/: code_generator.py
hyperai_builder/ai/models/: __init__.py  base.py  model_factory.py  openai_model.py
hyperai_builder/backend/: main.py
hyperai_builder/backend/core/: database.py
hyperai_builder/core/: config.py  logging.py
hyperai_builder/frontend/: app.py
hyperai_builder/models/: base.py  project.py  user.py
tests/: test_health.py
